{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 578,
  "lineage": "5311cc46-8a61-e9fc-8489-810b698057ee",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "liorm-EC2-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-0a87abc50ff287829",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a87abc50ff287829",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b4279187c2092eb",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_ip": "54.89.74.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-01bf16de4fbe725d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a029b62be98c452a",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f563b25374fdabc0"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_vpc.liorm-TF"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-0040a90aed3d011da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0040a90aed3d011da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03210ed8276d3e0c8",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "public_ip": "3.83.172.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-04b541438d2ead9af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a029b62be98c452a",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f563b25374fdabc0"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "liorm-EC2-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-0a4e33c618c6ccb3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4e33c618c6ccb3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8ec132cea3f2013",
            "private_dns": "ip-10-0-2-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.66",
            "public_ip": "3.87.252.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-0d48cc7841ffa4873",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057c8aa3e1e2050ce",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f563b25374fdabc0"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-07c11668d3a88e80b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c11668d3a88e80b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075d7fa6785bb5132",
            "private_dns": "ip-10-0-2-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.238",
            "public_ip": "54.83.116.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-0df5e81d005d202e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057c8aa3e1e2050ce",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "project-DIR-liorm",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f563b25374fdabc0"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "liorm-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF/99eff6fac598513b",
            "arn_suffix": "app/liorm-TF/99eff6fac598513b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "liorm-TF-211847859.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF/99eff6fac598513b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "liorm-TF",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f563b25374fdabc0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057c8aa3e1e2050ce"
              },
              {
                "subnet_id": "subnet-0a029b62be98c452a"
              }
            ],
            "subnets": [
              "subnet-057c8aa3e1e2050ce",
              "subnet-0a029b62be98c452a"
            ],
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "Project-DIR-liorm"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:40Z",
              "AutoTag_Creator": "liorm",
              "Name": "Project-DIR-liorm",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-0c66ff40a58cbe9a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:listener/app/liorm-TF/99eff6fac598513b/bdd595c7401769b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:listener/app/liorm-TF/99eff6fac598513b/bdd595c7401769b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF/99eff6fac598513b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.liorm-TF",
            "module.compute.aws_lb_target_group.liorm-TF",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "liorm-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "arn_suffix": "targetgroup/Project-DIR-liorm/099da716a80c5945",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Project-DIR-liorm",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "liorm-tg-attach-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945-20230920071853766100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "target_id": "i-0a87abc50ff287829"
          },
          "dependencies": [
            "module.compute.aws_instance.liorm-EC2-1a",
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.compute.aws_lb_target_group.liorm-TF",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_vpc.liorm-TF"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945-20230920071853493700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "target_id": "i-0040a90aed3d011da"
          },
          "dependencies": [
            "module.compute.aws_instance.liorm-EC2-1a",
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.compute.aws_lb_target_group.liorm-TF",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "liorm-tg-attach-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945-20230920071853922200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "target_id": "i-0a4e33c618c6ccb3e"
          },
          "dependencies": [
            "module.compute.aws_instance.liorm-EC2-1b",
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.compute.aws_lb_target_group.liorm-TF",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945-20230920071854061400000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/Project-DIR-liorm/099da716a80c5945",
            "target_id": "i-07c11668d3a88e80b"
          },
          "dependencies": [
            "module.compute.aws_instance.liorm-EC2-1b",
            "module.compute.aws_key_pair.liorm-tf-key_rsa",
            "module.compute.aws_lb_target_group.liorm-TF",
            "module.network.aws_security_group.liorm-TF-SG",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liorm-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:internet-gateway/igw-0731b74e4458fd8ca",
            "id": "igw-0731b74e4458fd8ca",
            "owner_id": "644435390668",
            "tags": {
              "Name": "liorm-TF"
            },
            "tags_all": {
              "Name": "liorm-TF",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0731b74e4458fd8ca",
            "id": "r-rtb-0a6d2701667b04ed01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a6d2701667b04ed0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.liorm-TF",
            "module.network.aws_route_table.liorm-TF",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liorm-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:route-table/rtb-0a6d2701667b04ed0",
            "id": "rtb-0a6d2701667b04ed0",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "liorm-TF"
            },
            "tags_all": {
              "Name": "liorm-TF",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liorm-pub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf8fe5e528725547",
            "route_table_id": "rtb-0a6d2701667b04ed0",
            "subnet_id": "subnet-0a029b62be98c452a"
          },
          "dependencies": [
            "module.network.aws_route_table.liorm-TF",
            "module.network.aws_subnet.liorm-us-east-1a",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liorm-pub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d76500919ebb0c",
            "route_table_id": "rtb-0a6d2701667b04ed0",
            "subnet_id": "subnet-057c8aa3e1e2050ce"
          },
          "dependencies": [
            "module.network.aws_route_table.liorm-TF",
            "module.network.aws_subnet.liorm-us-east-1b",
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liorm-TF-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:security-group/sg-0f563b25374fdabc0",
            "description": "Allow incoming HTTP traffic from your IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f563b25374fdabc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "147.235.208.237/32",
                  "89.138.129.95/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "liorm-TF-SG",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liorm-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:subnet/subnet-0a029b62be98c452a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a029b62be98c452a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:27Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-us-east-1a"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:27Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-us-east-1a",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liorm-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:subnet/subnet-057c8aa3e1e2050ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c8aa3e1e2050ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2023-09-20T07:18:27Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-us-east-1b"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-20T07:18:27Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-us-east-1b",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-0c66ff40a58cbe9a6"
          },
          "dependencies": [
            "module.network.aws_vpc.liorm-TF"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liorm-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:vpc/vpc-0c66ff40a58cbe9a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d604b30ad812eaa",
            "default_route_table_id": "rtb-0141e53b6b861ddcc",
            "default_security_group_id": "sg-0d093e54deb7736cf",
            "dhcp_options_id": "dopt-32015149",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c66ff40a58cbe9a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0141e53b6b861ddcc",
            "owner_id": "644435390668",
            "tags": {
              "Name": "liorm-TF-easy"
            },
            "tags_all": {
              "Name": "liorm-TF-easy",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            }
          }
        }
      ]
    }
  ]
}